Absent items notification corrected, white receipt text visible and collect address showing.

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -160,3 +160,44 @@ span.material-icons{
     box-sizing: content-box; 
 }
 /* generated by https://loading.io/ */
+
+/********************************************************* Checkout Success page   */
+.below-nav-container#checkout-success {
+   padding: 0px 0px 40px 0px;
+}
+
+.receipt-area {
+    background-color: black;
+    padding: 20px 10px;
+}
+.receipt-text-container {
+    width: 95%;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.receipt-text-container h2,
+.receipt-text-container .confirmation-num,
+.receipt-text-container p,
+.receipt-text-container #receipt_email {
+    color: white;
+}
+
+.receipt-text-container h2,
+.receipt-text-container .confirmation-num,
+#receipt_email {
+    text-align: center;
+}
+
+.clear-10 {
+    margin: 10px 0 !important;
+}
+
+@media (min-width: 601px) {
+    .receipt-text-container {
+        width: 50%;
+        margin-top: 80px;
+        margin-bottom: 80px;
+    }
+}
